# Football-Manager

./: CMakeLists.txt  Cup.cpp  Cup.hpp  Events.cpp  Events.hpp  League.cpp  League.hpp  Match.cpp  Match.hpp  Team.cpp  Team.hpp  cup.json  league.json  main.cpp  teams.json
database/: cup.json
